# Heard-and-Understood-App

./: .gitignore  CONSERT_INSTALLION.MD  README.md  app.py  email_credentials.py  pyproject.toml
Design/: DESIGN-README.md  README.md
flaskApp/: .gitignore  HeardAndUnderstood.db  app.py  database.py  db_utils.py
flaskApp/consert/: CONSERT_INSTALLATION.md  consert_engine.py  consert_test_script.py
flaskApp/consert_module/: consert_process.py
flaskApp/firebase/: __init__.py  auth.py  config.py
flaskApp/static/: modifications.csv  test_video_classification.csv
flaskApp/templates/: change-profile.html  dashboard.html  dashboardAdmin_base.html  dashboardPI_base.html  dashboardUser_base.html  forgot_password.html  groundTruthingRecords.html  ground_truthing.html  header.html  home.html  homeAdmin_base.html  homePI_base.html  home_base.html  (+14 more)
hua/: __init__.py  app.py  db_utils.py  forgot_password.html  homeAdmin_base.html  tempCodeRunnerFile.py
instance/: HeardAndUnderstood.db
templates/: enter_code.html
test_output/: test_video_short_bert_prediction.csv  test_video_short_bert_prediction.npy  test_video_short_classification.csv  test_video_short_cnn_prediction.csv  test_video_short_cnn_prediction.npy  test_video_short_metadata.json  test_video_short_metrics.csv  test_video_short_metrics.npy  test_video_short_pauses.csv  test_video_short_pauses.npy  test_video_short_rf_prediction.csv  test_video_short_rf_prediction.npy  test_video_short_transcription.csv  test_video_short_transcription.json  test_video_short_transcription.npy  test_video_short_transcription.txt
(+108 files in other folders)
